objects/Event_Costs__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <label>Event Name</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipName>Events_Budgeting</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accommodation costs</fullName>
                </value>
                <value>
                    <fullName>Cost per head</fullName>
                </value>
                <value>
                    <fullName>Delivery costs</fullName>
                </value>
                <value>
                    <fullName>Other costs</fullName>
                </value>
                <value>
                    <fullName>Travel costs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Event Cost</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Event Budgeting  Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>